# tr1cot-torch

./: .gitignore  pyproject.toml  train_text_to_text_lora.py  train_text_to_text_tuning.py
.github/: README.md
articles/: fractal.md
notebooks/: encode_text_as_rgb.ipynb  train_text-to-text_ddpm.ipynb  train_text-to-text_ddpm.lora.ipynb  train_text_ddpm.ipynb  train_text_vae.ipynb
scripts/: rgb_text.ipynb  train_autoencoder_kl.py  train_text_to_text_lora.py  train_text_to_text_tuning.py  train_text_vae.py
tests/layers/: test_hybrid.py  test_transformer.py
tests/models/: test_cnn.py  test_vit.py
tr1cot/layers/: convolution.py  hybrid.py  transformer.py
tr1cot/models/: cnn.py  vit.py
