[tool.poetry]
name = "tr1cot"
version = "0.0.3"
description = "Diffusion on language, with fractal shaping."
license = ".github/LICENSE.md"
readme = ".github/README.md"
authors = ["apehex <apehex@protonmail.com>"]
packages = [{include="tr1cot"}]

[tool.poetry.dependencies]
densecurves = ">=0.1"
mlable = ">=0.20"
python = ">=3.10,<3.13"
tensorflow = ">=2.16, <2.19"
tokun = ">=0.16"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
